# LO43-A2019

./: .gitignore  CMakeLists.txt  CR_git  Classes  Commandes GIT.odt  EdgarDupont-LO43-TP1-Rapport.txt  Git config.docx  Git_commands.odt  HELLOWORLD.cpp  HELLOWORLD.h  HelloW.cpp  HelloW.h  HelloWorld  HelloWorld.cpp  HelloWorld.h  Hello_world.cpp  Helloworld.cpp  Helloworld.h  Humidity.cpp  Humidity.h  Humidity.txt  IoTSystem  LO43_Rapport_commande_git_Luka_LAMBALOT.odt  Les commandes de git.docx  Light.cpp  Light.h  Light.txt  README.md  Rapport GitHub_ROLLAND_Julia.docx  Rapport du rôle des commandes de git.docx  RapportCommandesGit.docx  Résumé commade GitHub.txt  Scheduler.cpp  Scheduler.h  Sensor.cpp  Sensor.h  Server.cpp  Server.h  Sound.cpp  Sound.h  (+32 more)
C++ Projet/: Scheduler.cpp  Scheduler.h  Sensor.cpp  Sensor.h  Server.cpp  Server.h
Compte rendu/: TP1 Compte rendu.docx
HelloWorld/: #HelloW.hpp#  ClientHW.cpp  HelloA.cpp  HelloA.h  HelloA.hpp  HelloB.cpp  HelloB.h  HelloB.hpp  HelloW  HelloW.cpp  HelloW.hpp
Helloworld/: helloworld.cpp
LO43_projet_final_CAODURO/: Server.h  humidity.h  light.h  main.cpp  scheduler.cpp  scheduler.h  sensor.cpp  sensor.h  server.cpp  sound.h  temperature.h
ProgrammeHelloWorld/: helloworld.cpp  helloworld.h  monprogramme.cpp
Project/: Project.sln  Sensor.h  Server.cpp  Server.h  humdity data.txt  light data.txt  main.cpp  scheduler.cpp  scheduler.h  sound data.txt  temperature data.txt
Project_v2/: Humidity.cpp  Humidity.h  Light.cpp  Light.h  Project_v2.cbp  Project_v2.depend  Project_v2.layout  Scheduler.cpp  Scheduler.h  Sensor.cpp  Sensor.h  Server.cpp  Server.h  Sound.cpp  Sound.h  Temperature.cpp  Temperature.h  humidity.txt  light.txt  main.cpp  (+2 more)
Projet/: .gitignore  CMakeLists.txt  Humidity.cpp  Humidity.h  Light.cpp  Light.h  Projet.cbp  Projet.depend  Projet.layout  Scheduler.cpp  Scheduler.h  Sensor.cpp  Sensor.h  Server.cpp  Server.h  Sound.cpp  Sound.h  Temperature.cpp  Temperature.h  humidity.txt  light.txt  main.cpp  sound.txt  temperature.txt
Projet/Logs/: humidity.txt  light.txt  sound.txt  temperature.txt
Projet/Sensors/: Humidity.cpp  Humidity.h  Light.cpp  Light.h  Sensor.h  SensorInterface.h  Sound.cpp  Sound.h  Temperature.cpp  Temperature.h
Projet/Server/: Server.cpp  Server.h
Server/: CMakeLists.txt  Humidity.cpp  Humidity.h  Humidity.hpp  Light.cpp  Light.h  Light.hpp  Scheduler.cpp  Scheduler.h  Scheduler.hpp  Sensor.cpp  Sensor.h  Server.cpp  Server.h  Server.hpp  Sound.cpp  Sound.h  Sound.hpp  Temperature.cpp  Temperature.h  Temperature.hpp  a.out  humidity.cpp  humidity.h  light.cpp  light.h  log.txt  main.cpp  scheduler.cpp  scheduler.h  sensor.cpp  sensor.h  server.cpp  server.h  sound.cpp  sound.h  temperature.cpp  temperature.h
Server/Header/: Data.h  Humidity.h  Light.h  Scheduler.h  Sensor.h  Server.h  Sound.h  Temperature.h
Server/Headers/: Data.h  Humidity.h  Light.h  Scheduler.h  Sensor.h  SensorInterface.h  Server.h  Sound.h  Temperature.h
Server/Logs/: HumidityLog.txt  LightLog.txt  SoundLog.txt  TemperatureLog.txt
Server/Source/: Data.cpp  Humidity.cpp  Light.cpp  Scheduler.cpp  Sensor.cpp  Server.cpp  Sound.cpp  Temperature.cpp  main.cpp
Server/Sources/: Data.cpp  Humidity.cpp  Light.cpp  Scheduler.cpp  SensorInterface.cpp  Server.cpp  Sound.cpp  Temperature.cpp
Server/log/: log_file_capteur.txt
(+214 files in other folders)
